--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Trabajo Integral</title>
 </head>
 <body>
-    <h1>Ingrese Su Coordenada txt: </h1>
-    <input type="file" id="archivo">
+    <h1>Coordenadas:</h1>
     <hr>
-    <textarea  id="pantalla" cols="30" rows="10"></textarea>
+    <textarea  id="pantalla-1" cols="30" rows="10">
+    </textarea>
+    <br>
     <br>
     <button type="button" class="btn0">Enviar</button>
     <br><br><br>
