--- a/insert.html
+++ b/insert.html
@@ -10,17 +10,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Trabajo Integral</title>
 </head>
-<body class="background font">
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+<body class="fondo font">
+
     <nav class="navbar navbar-expand-sm navbar-dark bg-light border-danger">
         <div class="container d-flex justify-content-around">
             <div>
@@ -39,13 +30,45 @@
         </div>
     </nav>
 
-    <div class="titular">
-        <h1 class="titulo">Trabajo Integral</h1>
-        <h2>Por el Grupo 3</h2>
+    <br><br><br>
+
+    <div class="container bg-light">
         <br>
-        <div class="wrap d-flex justify-content-center">
-            <a class="button d-flex justify-content-center" href="insert.html"> Ver el trabajo </a>
+        <div class="d-flex justify-content-center">
+            <h1>Coordenadas:</h1>
         </div>
+        <hr>
+        <div class="d-flex justify-content-center">
+            <textarea  id="pantalla-1" cols="30" rows="10" disabled>
+            </textarea>
+        </div>
+        <br><br>
     </div>
+
+    <br><br><br>
+
+    <div class="container bg-light">
+        <br>
+        <div class="d-flex justify-content-center">
+            <h1>Ingrese Su Distribucion txt: </h1>
+        </div>
+        <div class="d-flex justify-content-center">
+            <input type="file" id="archivo-dis">
+        </div>
+        <hr>
+        <div class="d-flex justify-content-center">
+            <textarea  id="pantalla-dis" cols="30" rows="10" disabled></textarea>
+        </div>
+        <br>
+        <div class="d-flex justify-content-center">
+            <button type="button" class="btn0">Enviar</button>
+        </div>
+        <br>
+    </div>
+    <br><br>
+
+    <script src="main.js"></script>
+    <script src="funciones.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </body>
 </html>
