--- a/insert.html
+++ b/insert.html
@@ -43,6 +43,10 @@
             </textarea>
         </div>
         <br><br>
+        <div class="d-flex justify-content-center">
+            <button type="button" class="btn0">Enviar</button>
+        </div>
+        <br><br>
     </div>
 
     <br><br><br>
@@ -61,7 +65,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center">
-            <button type="button" class="btn0">Enviar</button>
+            <button type="button" class="btn1">Enviar</button>
         </div>
         <br>
     </div>
