--- a/insert.html
+++ b/insert.html
@@ -43,10 +43,6 @@
             </textarea>
         </div>
         <br><br>
-        <div class="d-flex justify-content-center">
-            <button type="button" class="btn0">Enviar</button>
-        </div>
-        <br><br>
     </div>
 
     <br><br><br>
@@ -57,7 +53,7 @@
             <h1>Ingrese Su Distribucion txt: </h1>
         </div>
         <div class="d-flex justify-content-center">
-            <input type="file" id="archivo-dis">
+            <input type="file" id="archivo-dis" accept=".txt">
         </div>
         <hr>
         <div class="d-flex justify-content-center">
